# dsp_guide

./: .gitignore  astro.config.mjs  build.sh  clean.sh  debug_providers.patch  eslint.config.js  https-proxy.js  local_deploy.sh  package-lock.json  package.json  remove-bg.sh  run.sh  tailwind.config.mjs.backup  test_ata_calculation.js  vitest.config.ts  wrangler.toml
public/: ._robots.txt  robots.txt  sitemap.xml
public/splitdo/: metadata.json
src/: env.d.ts  middleware.ts
src/__tests__/: auth.test.ts  logger.test.ts  setup.test.ts
src/actions/: index.ts
src/applications_leptos/admin_app/: Cargo.toml  build.sh
src/applications_leptos/admin_app/src/: lib.rs  store.rs
src/applications_leptos/admin_app/src/api/: admin_client.rs  client.rs  mod.rs  protocol_client.rs  types.rs  whatsapp_client.rs
src/applications_leptos/admin_app/src/components/: header.rs  mod.rs  sidebar.rs
src/applications_leptos/admin_app/src/components/modals/: authenticate_whatsapp_modal.rs  connect_whatsapp_modal.rs  create_development_issue.rs  create_product_issue.rs  create_project_stage.rs  mod.rs
src/applications_leptos/admin_app/src/pages/: community_support.rs  dashboard.rs  development.rs  mod.rs  product.rs  project.rs
src/applications_leptos/admin_app/src/protocol/: constants.rs  header.rs  mod.rs  parser.rs
src/components/: BlackPhoneHero.astro  D1DatabaseDemo.astro  HeroPhones.astro  WhitePhoneHero.astro
src/components-qwik/: DarkModeToggle.tsx  PricingCard.tsx  QwikLoginForm.tsx  SimpleLoginForm.tsx
src/layouts/: AuthLayout.astro  Layout.astro  (+1 more)
(+479 files in other folders)
